--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,19 @@
       <div class="content">
         <h1>Welcome</h1>
         <p>To Carl Chat</p>
+        <div class="avatar-container">
+          <img id="avatar" src="../asset/default_avatar.gif" alt="Avatar" />
+        </div>
+        <div class="controls">
+          <button id="left-btn">Left</button>
+          <button id="right-btn">Right</button>
+          <button id="save-btn">Save</button>
+        </div>
+        <div class="clothing-container">
+          <img id="cloth" src="default-cloth.png" alt="Clothing" />
+        </div>
       </div>
     </div>
+    <script src="../js/script.js"></script>
   </body>
 </html>
