--- a/static/style.css
+++ b/static/style.css
@@ -99,3 +99,33 @@ html {
     background-color:rgb(255, 255, 255);
   }
 
+  .dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    left: 10px;
+    right: auto;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #565252;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
