--- a/templates/home.html
+++ b/templates/home.html
@@ -16,13 +16,23 @@
           </button>
         </a>
       </p>
+
+      <div class="dropdown">
+        <button id="settings">Settings</button>
+        <div class="dropdown-content">
+            <a href="/aboutpage">About Page</a>
+            <a href="/aboutus">About Us</a>
+            <a href="/contact">Contact Us</a>
+        </div>
+    </div>
         <!--<img id="homeicon" src="../asset/house.jpg"/>
         <link href="../asset/house.jpg" />-->
     </div>
     <h1 id="maintitle">Carleton Campus Map</h1>
       <div class="mapcontent">
       </div>
-    
-    <script src="../js/script.js"></script>
+
+    <script src="../js/settings.js"></script>
+
   </body>
 </html>
