--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,7 @@
       <p>
         <a href="../templates/home.html">
           <button>
-          <img id="homeicon" src="../asset/houseicon.jpg"/>
+          <img id="homeicon"  src="{{ url_for('asset', filename='houseicon.jpg') }}">
           </button>
         </a>
       </p>
