--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Carl Chat Main</title>
-    <link rel="stylesheet" href="../static/style.css" />
+    <link rel="stylesheet" href="/static/style.css" />
   </head>
   <body>
 
