--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="/static/style.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Carl Chat Main</title>
+    <link rel="stylesheet" href="../static/style.css" />
   </head>
   <body>
 
     <div class="homebutton">
       <p>
-        <a href="../templates/home.html">
+        <a href="/home">
           <button>
-          <img id="homeicon" src="../asset/houseicon.jpg"/>
+          <img id="homeicon" src="../static/houseicon.jpg"/>
           </button>
         </a>
       </p>
@@ -22,14 +25,13 @@
             <a href="/contact">Contact Us</a>
         </div>
     </div>
-        <!--<img id="homeicon" src="../asset/house.jpg"/>
-        <link href="../asset/house.jpg" />-->
+
     </div>
     <h1 id="maintitle">Carleton Campus Map</h1>
       <div class="mapcontent">
       </div>
 
-    <script src="../js/settings.js"></script>
+    <script src="../static/settings.js"></script>
 
   </body>
 </html>
