--- a/app/templates/selectcharacter.html
+++ b/app/templates/selectcharacter.html
@@ -7,12 +7,21 @@
     <link rel="stylesheet" href="../static/style.css" />
   </head>
   <body>
+    <div class="homebutton">
+      <p>
+        <a href="/home">
+          <button>
+          <img id="homeicon" src="../static/houseicon.jpg"/>
+          </button>
+        </a>
+      </p>
+    </div>
     <div class="wrapper">
       <div class="content">
         <h1>Welcome</h1>
         <p>To Carl Chat</p>
         <div class="avatar-container">
-          <img id="avatar" src="../asset/default_avatar.gif" alt="Avatar" />
+          <img id="avatar" src="../static/default_avatar.gif" alt="Avatar" />
         </div>
         <div class="controls">
           <button id="left-btn">Left</button>
@@ -20,7 +29,7 @@
           <button id="save-btn">Save</button>
         </div>
         <div class="clothing-container">
-          <img id="cloth" src="default-cloth.png" alt="Clothing" />
+          <img id="cloth" src="../static/default-cloth.png" alt="Clothing" />
         </div>
       </div>
     </div>
