--- a/app/static/style.css
+++ b/app/static/style.css
@@ -26,7 +26,7 @@ html {
 .content {
   text-align: center; /* Center the text inside the content */
   padding: 200px;
-  background-image: url("../asset/background.gif"); /* Background image for the content */
+  background-image: url("../static/background.gif"); /* Background image for the content */
   background-size: cover; /* Cover the entire content area with the background image */
 }
 
@@ -38,13 +38,13 @@ html {
 }
 
 #homeicon {
-  background-image: url("../asset/houseicon.jpg");
+  background-image: url("../static/houseicon.jpg");
   width: 40px;
   height: 40px;
 }
 .mapcontent {
   padding: 200px;
-  background-image: url("../asset/FrontPage1.jpg"); 
+  background-image: url("../static/FrontPage1.jpg"); 
   background-position: center;
   background-size: cover; 
   width: 90%;
