When you register, username and password stored in database, when you login, checks if username and password combination is in database, if so, logs in, else try again. Added logged in as in homepage to show they are logged in. If not logged in, when click home icon, takes to log in page

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -26,6 +26,12 @@
         </div>
     </div>
 
+    {% if username %}
+    <p>Logged in as: {{ username }}!</p>
+    {% else %}
+    <p>Playing as: guest!</p>
+    {% endif %}
+
     </div>
     <h1 id="maintitle">Carleton Campus Map</h1>
       <div class="mapcontent">
