--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
-<html lang ="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name ="viewport" content = "width=device-width, initial-scale=1.0">
-        <title>Login</title>
-    </head>
-    <body>
-        <h2>Login</h2>
-        <form action="/login" method = "post">
-            <label for="username">Username:</label><br>
-            <input type="text" id = "username" name = "username" required><br>
-            <label for="password">Password:</label><br>
-            <input type ="password" id = "password" name = "password" required><br>
-            <button type = "submit">Login</button>
-        </form>
-        <p>Don't have an account? <a href="/register">Register</a></p>
-    </body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Login</title>
+    <link rel="stylesheet" href="../static/registerandlogin.css">
+  </head>
+  <body>
+    <h2>Login</h2>
+    <div class="circle-image">
+      <img src="...\static\login.gif">
+    </div>
+    <form action="/login" method="post">
+      <label for="username">Username:</label><br />
+      <input type="text" id="username" name="username" required /><br />
+      <label for="password">Password:</label><br />
+      <input type="password" id="password" name="password" required /><br />
+      <button type="submit">Login</button>
+    </form>
+    <p>Don't have an account? <a href="/register">Register</a></p>
+  </body>
 </html>
