--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content=""
-      width="device-width,"
-      initial-scale="1.0"
-    />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
-  </head>
-  <body>
+    <link rel="stylesheet" href="../static/registerandlogin.css">
+</head>
+<body>
     <h2>Register</h2>
+    <div class="circle-image">
+        <img src="...\static\login.gif">
+    </div>
     <form action="/register" method="post">
-      <label for="username">Username:</label><br />
-      <input type="text" id="username" name="username" required /><br />
-      <label for="password">Password:</label><br />
-      <input type="password" id="password" name="password" required /><br />
-      <button type="submit">Register</button>
+        <label for="username">Username:</label><br>
+        <input type="text" id="username" name="username" required><br>
+        <label for="password">Password:</label><br>
+        <input type="password" id="password" name="password" required><br>
+        <button type="submit">Register</button>
     </form>
     <p>Already have an account? <a href="/login">Login</a></p>
-  </body>
+</body>
 </html>
