--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -23,6 +23,7 @@
             <a href="/aboutpage">About Page</a>
             <a href="/aboutus">About Us</a>
             <a href="/contact">Contact Us</a>
+            <a href="/logout">Logout</a>
         </div>
     </div>
 
