--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -35,8 +35,17 @@
 
     </div>
     <h1 id="maintitle">Carleton Campus Map</h1>
-      <div class="mapcontent">
-      </div>
+
+    
+    <img id="mapimage" src="../static/FrontPage1.jpg" usemap="#clickmap">
+
+    <map name="clickmap">
+      <area shape="rect" coords="655,591,738,697" alt="Sayles" href="/sayles">
+      <area shape="rect" coords="683,345,770,437" alt="Library" href="/library">
+      <area shape="rect" coords="890,697,993,795" alt="BaldSpot" href="/baldspot">
+    </map>
+      
+
 
     <script src="../static/settings.js"></script>
 
