--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -4,25 +4,29 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
-    <link rel="stylesheet" href="../static/registerandlogin.css">
+    <link rel="stylesheet" href="../static/registerandlogin.css" />
   </head>
   <body>
-    <h2>Login</h2>
-    <div class="circle-image">
-      <img src="...\static\login.gif">
-    </div>
+    <div class="wrapper">
+      <div class="content">
+        <h2>Login</h2>
+        <div class="circle-image">
+          <img src="...\static\login.gif" />
+        </div>
 
-    {% if error %}
-    <p style="color: red;">{{error}}</p>
-    {% endif %}
-    
-    <form action="/login" method="post">
-      <label for="username">Username:</label><br />
-      <input type="text" id="username" name="username" required /><br />
-      <label for="password">Password:</label><br />
-      <input type="password" id="password" name="password" required /><br />
-      <button type="submit">Login</button>
-    </form>
-    <p>Don't have an account? <a href="/register">Register</a></p>
+        {% if error %}
+        <p style="color: red">{{error}}</p>
+        {% endif %}
+
+        <form action="/login" method="post">
+          <label for="username">Username:</label><br />
+          <input type="text" id="username" name="username" required /><br />
+          <label for="password">Password:</label><br />
+          <input type="password" id="password" name="password" required /><br />
+          <button type="submit">Login</button>
+        </form>
+        <p>Don't have an account? <a href="/register">Register</a></p>
+      </div>
+    </div>
   </body>
 </html>
