--- a/app/templates/selectcharacter.html
+++ b/app/templates/selectcharacter.html
@@ -11,7 +11,7 @@
       <p>
         <a href="/home">
           <button>
-            <img id="homeicon" src="../static/houseicon.jpg" />
+            <img id="homeicon" src="../static/asset/houseicon.jpg" />
           </button>
         </a>
       </p>
@@ -19,20 +19,22 @@
     <div class="wrapper">
       <div class="content">
         <h1>Welcome to Carl Chat</h1>
-        <p>Choose your Avatar and go talk with Carls!</p>
+        <p class="intro">Choose your Avatar and go talk with Carls!</p>
+
         <div class="avatar-container">
-          <img id="avatar" src="../static/default_avatar.gif" alt="Avatar" />
+          <img src="../static/asset/avatar.png" alt="default avatar" />
+          <img src="../static/asset/avatar1.png" alt="cat avatar" />
+          <img src="../static/asset/avatar2.png" alt="butterfly avatar" />
+          <img src="../static/asset/avatar3.png" alt="rabbit avatar" />
         </div>
+
         <div class="controls">
           <button id="left-btn">Left</button>
           <button id="right-btn">Right</button>
           <button id="save-btn">Save</button>
         </div>
-        <div class="clothing-container">
-          <img id="cloth" src="../static/default-cloth.png" alt="Clothing" />
-        </div>
       </div>
     </div>
-    <script src="../js/script.js"></script>
+    <script src="../static/js/script.js"></script>
   </body>
 </html>
