--- a/app/templates/selectcharacter.html
+++ b/app/templates/selectcharacter.html
@@ -23,7 +23,7 @@
         <p class="intro">Choose your Avatar and go talk with Carls!</p>
 
         <div class="avatar-container">
-          <img src="../static/asset/avatar.png" alt="default avatar" />
+          <img src="../static/asset/avatar.png" alt="avatar" />
         </div>
 
         <div class="controls">
