--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../static/style_home.css" />
   </head>
   <body>
-    <div class="top-element">
+    <nav class="navbar">
       <div class="home_button">
         <a href="/home">
           <button>
@@ -65,47 +65,30 @@
           <a href="#">Logout</a>
         </div>
       </div>
+    </nav>
 
-      <div class="userinfo">
-        {% if username %}
-        <p>Logged in as: {{ username }}!</p>
-        {% else %}
-        <p>Playing as: guest!</p>
-        {% endif %}
+    <!-- Modal or Popup -->
+    <div id="myModal" class="modal">
+      <div class="modal-content">
+        <!-- Close button for the modal -->
+        <span class="close">&times;</span>
+        <!-- Modal content goes here -->
+        <h2>Settings</h2>
+        <p>
+          This is the content of the modal. It can cover most of the screen.
+        </p>
       </div>
     </div>
 
     <div class="content">
-      <h1 id="maintitle">Carleton Campus Map</h1>
-
       <img
         id="mapimage"
         src="../static/asset/FrontPage1.jpg"
         usemap="#clickmap"
+        alt="Map Image"
       />
-
-      <map name="clickmap">
-        <area
-          shape="rect"
-          coords="655,591,738,697"
-          alt="Sayles"
-          href="/sayles"
-        />
-        <area
-          shape="rect"
-          coords="683,345,770,437"
-          alt="Library"
-          href="/library"
-        />
-        <area
-          shape="rect"
-          coords="890,697,993,795"
-          alt="BaldSpot"
-          href="/baldspot"
-        />
-      </map>
     </div>
 
-    <script src="../static/js/settings.js"></script>
+    <script src="../static/js/scripts_home.js"></script>
   </body>
 </html>
