Remove unnecessary files

--- a/app/templates/baldspot.html
+++ b/app/templates/baldspot.html
@@ -92,6 +92,6 @@
       <h1 class="intro">Bald Spot</h1>
     </div>
 
-    <script src="../static/js/scripts_home.js"></script>
+    <script src="../static/js/modal.js"></script>
   </body>
 </html>
