--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -134,6 +134,6 @@
       </div>
     </div>
 
-    <script src="../static/js/scripts_home.js"></script>
+    <script src="../static/js/modal.js"></script>
   </body>
 </html>
