--- a/app/templates/welcome.html
+++ b/app/templates/welcome.html
@@ -39,6 +39,6 @@
         </div>
       </div>
     </div>
-    <script src="../static/js/script.js"></script>
+    <script src="../static/js/choose.js"></script>
   </body>
 </html>
