--- a/app/templates/library.html
+++ b/app/templates/library.html
@@ -92,6 +92,6 @@
       <h1 class="intro">Library</h1>
     </div>
 
-    <script src="../static/js/scripts_home.js"></script>
+    <script src="../static/js/modal.js"></script>
   </body>
 </html>
