--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -20,7 +20,7 @@
         </a>
       </div>
       <div class="setting_button">
-        <button id="setting-btn">
+        <button id="modal-btn">
           <img
             class="icon"
             src="../static/asset/setting_button.png"
