--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -21,6 +21,51 @@
       </div>
     </nav>
 
-    <div class="content"></div>
+    <div class="content">
+      <div class="circle-image">
+        <img src="../static/asset/avatar.png" />
+      </div>
+      <div class="chage_button">
+        <button id = "modal-btn">
+          <img
+            class="icon"
+            src="../static/asset/change_button.png"
+            alt="Change"
+          />
+          <img
+            class="icon-hover"
+            src="../static/asset/change_button_hover.png"
+            alt="Change Hover"
+          />
+        </button>
+      </div>
+
+      <!-- Modal or Popup -->
+      <div id="myModal" class="modal">
+        <div class="modal-content">
+          <!-- Close button for the modal -->
+          <span class="close">&times;</span>
+          <!-- Modal content goes here -->
+          <div class="avatar-container">
+            <img src="../static/asset/avatar.png" alt="avatar" />
+          </div>
+  
+          <div class="controls">
+            <div class="left-right-buttons">
+              <button id="left-btn">Left</button>
+              <button id="right-btn">Right</button>
+            </div>
+            <div class="go-chat-button">
+              <a href="/home">
+                <button id="save-btn">Go Chat!</button>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+        
+      <div class= "information">
+    </div>
+    <script src="../static/js/modal.js"></script>
   </body>
 </html>
